added GetMovieRecommendations to IApiClient

--- a/MediaBrowser.Model.net35/MediaBrowser.Model.net35.csproj
+++ b/MediaBrowser.Model.net35/MediaBrowser.Model.net35.csproj
@@ -909,6 +909,9 @@
     <Compile Include="..\MediaBrowser.Model\Querying\LatestItemsQuery.cs">
       <Link>Querying\LatestItemsQuery.cs</Link>
     </Compile>
+    <Compile Include="..\MediaBrowser.Model\Querying\MovieRecommendationQuery.cs">
+      <Link>Querying\MovieRecommendationQuery.cs</Link>
+    </Compile>
     <Compile Include="..\MediaBrowser.Model\Querying\NextUpQuery.cs">
       <Link>Querying\NextUpQuery.cs</Link>
     </Compile>
