--- a/MediaBrowser.Model.net35/MediaBrowser.Model.net35.csproj
+++ b/MediaBrowser.Model.net35/MediaBrowser.Model.net35.csproj
@@ -288,6 +288,9 @@
     <Compile Include="..\MediaBrowser.Model\Dlna\ContentFeatureBuilder.cs">
       <Link>Dlna\ContentFeatureBuilder.cs</Link>
     </Compile>
+    <Compile Include="..\MediaBrowser.Model\Dlna\DefaultLocalPlayer.cs">
+      <Link>Dlna\DefaultLocalPlayer.cs</Link>
+    </Compile>
     <Compile Include="..\MediaBrowser.Model\Dlna\DeviceIdentification.cs">
       <Link>Dlna\DeviceIdentification.cs</Link>
     </Compile>
@@ -321,11 +324,17 @@
     <Compile Include="..\MediaBrowser.Model\Dlna\HttpHeaderInfo.cs">
       <Link>Dlna\HttpHeaderInfo.cs</Link>
     </Compile>
+    <Compile Include="..\MediaBrowser.Model\Dlna\ILocalPlayer.cs">
+      <Link>Dlna\ILocalPlayer.cs</Link>
+    </Compile>
     <Compile Include="..\MediaBrowser.Model\Dlna\MediaFormatProfile.cs">
       <Link>Dlna\MediaFormatProfile.cs</Link>
     </Compile>
     <Compile Include="..\MediaBrowser.Model\Dlna\MediaFormatProfileResolver.cs">
       <Link>Dlna\MediaFormatProfileResolver.cs</Link>
+    </Compile>
+    <Compile Include="..\MediaBrowser.Model\Dlna\NullLocalPlayer.cs">
+      <Link>Dlna\NullLocalPlayer.cs</Link>
     </Compile>
     <Compile Include="..\MediaBrowser.Model\Dlna\PlaybackErrorCode.cs">
       <Link>Dlna\PlaybackErrorCode.cs</Link>
