add movie metadata support to live tv

--- a/MediaBrowser.Controller/MediaBrowser.Controller.csproj
+++ b/MediaBrowser.Controller/MediaBrowser.Controller.csproj
@@ -293,6 +293,7 @@
     <Compile Include="Providers\IRemoteSearchProvider.cs" />
     <Compile Include="Providers\ISeriesOrderProvider.cs" />
     <Compile Include="Providers\ItemInfo.cs" />
+    <Compile Include="Providers\LiveTvProgramLookupInfo.cs" />
     <Compile Include="Providers\LocalImageInfo.cs" />
     <Compile Include="Providers\LocalMetadataResult.cs" />
     <Compile Include="Providers\MetadataRefreshMode.cs" />
