--- a/MediaBrowser.Providers/MediaBrowser.Providers.csproj
+++ b/MediaBrowser.Providers/MediaBrowser.Providers.csproj
@@ -108,6 +108,7 @@
     <Compile Include="MediaInfo\SubtitleDownloader.cs" />
     <Compile Include="MediaInfo\SubtitleResolver.cs" />
     <Compile Include="MediaInfo\SubtitleScheduledTask.cs" />
+    <Compile Include="Movies\LiveTvMovieDbProvider.cs" />
     <Compile Include="Movies\MovieDbTrailerProvider.cs" />
     <Compile Include="Movies\MovieExternalIds.cs" />
     <Compile Include="Movies\GenericMovieDbInfo.cs" />
