--- a/Nuget/MediaBrowser.Common.Internal.nuspec
+++ b/Nuget/MediaBrowser.Common.Internal.nuspec
@@ -9,8 +9,8 @@
         <projectUrl>https://github.com/MediaBrowser/MediaBrowser</projectUrl>
         <iconUrl>http://www.mb3admin.com/images/mb3icons1-1.png</iconUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
-        <description>Contains common components shared by Media Browser Theater and Media Browser Server. Not intended for plugin developer consumption.</description>
-        <copyright>Copyright © Media Browser 2013</copyright>
+        <description>Contains common components shared by Emby Theater and Emby Server. Not intended for plugin developer consumption.</description>
+        <copyright>Copyright © Emby 2013</copyright>
         <dependencies>
             <dependency id="MediaBrowser.Common" version="3.0.603" />
             <dependency id="NLog" version="3.2.0.0" />
