--- a/Nuget/MediaBrowser.Common.nuspec
+++ b/Nuget/MediaBrowser.Common.nuspec
@@ -4,13 +4,13 @@
         <id>MediaBrowser.Common</id>
         <version>3.0.603</version>
         <title>MediaBrowser.Common</title>
-        <authors>Media Browser Team</authors>
+        <authors>Emby Team</authors>
         <owners>ebr,Luke,scottisafool</owners>
         <projectUrl>https://github.com/MediaBrowser/MediaBrowser</projectUrl>
         <iconUrl>http://www.mb3admin.com/images/mb3icons1-1.png</iconUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
-        <description>Contains common model objects and interfaces used by all Media Browser solutions.</description>
-        <copyright>Copyright © Media Browser 2013</copyright>
+        <description>Contains common model objects and interfaces used by all Emby solutions.</description>
+        <copyright>Copyright © Emby 2013</copyright>
     </metadata>
     <files>
         <file src="dlls\net35\MediaBrowser.Model.dll" target="lib\net35\MediaBrowser.Model.dll" />
