--- a/Nuget/MediaBrowser.Server.Core.nuspec
+++ b/Nuget/MediaBrowser.Server.Core.nuspec
@@ -4,13 +4,13 @@
         <id>MediaBrowser.Server.Core</id>
         <version>3.0.603</version>
         <title>Media Browser.Server.Core</title>
-        <authors>Media Browser Team</authors>
+        <authors>Emby Team</authors>
         <owners>ebr,Luke,scottisafool</owners>
         <projectUrl>https://github.com/MediaBrowser/MediaBrowser</projectUrl>
 		<iconUrl>http://www.mb3admin.com/images/mb3icons1-1.png</iconUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
-        <description>Contains core components required to build plugins for Media Browser Server.</description>
-        <copyright>Copyright © Media Browser 2013</copyright>
+        <description>Contains core components required to build plugins for Emby Server.</description>
+        <copyright>Copyright © Emby 2013</copyright>
         <dependencies>
             <dependency id="MediaBrowser.Common" version="3.0.603" />
         </dependencies>
