--- a/MediaBrowser.Model/MediaBrowser.Model.csproj
+++ b/MediaBrowser.Model/MediaBrowser.Model.csproj
@@ -226,7 +226,7 @@
     <Compile Include="Dto\RecommendationType.cs" />
     <Compile Include="Dto\SubtitleDownloadOptions.cs" />
     <Compile Include="Entities\IsoType.cs" />
-    <Compile Include="Entities\MediaInfo.cs" />
+    <Compile Include="MediaInfo\MediaInfo.cs" />
     <Compile Include="Entities\MediaStreamType.cs" />
     <Compile Include="Entities\PackageReviewInfo.cs" />
     <Compile Include="Entities\ProviderIdsExtensions.cs" />
