--- a/MediaBrowser.Model.Portable/MediaBrowser.Model.Portable.csproj
+++ b/MediaBrowser.Model.Portable/MediaBrowser.Model.Portable.csproj
@@ -560,9 +560,6 @@
     <Compile Include="..\MediaBrowser.Model\Entities\MBRegistrationRecord.cs">
       <Link>Entities\MBRegistrationRecord.cs</Link>
     </Compile>
-    <Compile Include="..\MediaBrowser.Model\Entities\MediaInfo.cs">
-      <Link>Entities\MediaInfo.cs</Link>
-    </Compile>
     <Compile Include="..\MediaBrowser.Model\Entities\MediaStream.cs">
       <Link>Entities\MediaStream.cs</Link>
     </Compile>
@@ -808,6 +805,9 @@
     </Compile>
     <Compile Include="..\MediaBrowser.Model\MediaInfo\LiveStreamResponse.cs">
       <Link>MediaInfo\LiveStreamResponse.cs</Link>
+    </Compile>
+    <Compile Include="..\MediaBrowser.Model\MediaInfo\MediaInfo.cs">
+      <Link>MediaInfo\MediaInfo.cs</Link>
     </Compile>
     <Compile Include="..\MediaBrowser.Model\MediaInfo\MediaProtocol.cs">
       <Link>MediaInfo\MediaProtocol.cs</Link>
